♻️ setup v0 and v1 through eleventy

--- a/v0/projects/index.html
+++ b/v0/projects/index.html
@@ -27,7 +27,7 @@
   <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-4">
-      <img src="https://goo.gl/tRUcbV" alt="Stylized fan art of the Jacket character" class="img-setup img-fluid">
+      <img src="./jacket.jpg" alt="Stylized fan art of the Jacket character" class="img-setup img-fluid">
     </div>
     <div class="col-md-6">
       <p class="text">Jacket is the protagonist from the 'Hotline Miami' franchise. You could argue either way, that he's a serial killer, or that he's a vigilante hero, but regardless, his methods are brutal and effective.
@@ -111,7 +111,7 @@
         <p class="text"><a href="http://hotlinemiami.wikia.com/wiki/Biker" target="_blank" style="font-size: 18px; color: #CF00D6;">More Info</a></p>
       </div>
       <div class="col-md-4">
-        <img src="https://goo.gl/o5QSgU" alt="Stylized fan art of the Biker character" class="img-setup img-fluid"><br>
+        <img src="./biker.png" alt="Stylized fan art of the Biker character" class="img-setup img-fluid"><br>
       </div>
       <div class="col-md-1"></div>
     </div><br>
