🛠️ attempt a monorepo config

--- a/v0/index.html
+++ b/v0/index.html
@@ -118,14 +118,15 @@
       </p>
       <div class="row">
         <div class="col-md">
-          <strong>My First Project</strong>
+          <a href="./projects/index.html"><strong>My First Webpage</strong></a>
           <p>
-            This is my default description for my project, or lack there of.
+            I guess third, but the first two disappeared with my tumblr account.
+            Made for a freecodecamp project.
           </p>
           <small>Uses: HTML5, CSS3</small>
         </div>
         <div class="col-md">
-          <img src="./resources/placeholder.jpg" alt="" />
+          <img src="./resources/preview.png" alt="" />
         </div>
         <div class="col-md">
           <img src="./resources/placeholder.jpg" alt="" />
@@ -150,15 +151,14 @@
           <img src="./resources/placeholder.jpg" alt="" />
         </div>
         <div class="col-md">
-          <img src="./resources/preview.png" alt="" />
+          <img src="./resources/placeholder.jpg" alt="" />
         </div>
         <div class="col-md">
-          <a href="./projects/index.html"><strong>My First Webpage</strong></a>
+          <strong>My Fourth Project</strong>
           <p>
-            I guess third, but the first two disappeared with my tumblr account.
-            Made for a freecodecamp project.
+            This is my default description for my project, or lack there of.
           </p>
-          <small>Uses: HTML5, CSS3</small>
+          <small>Uses: HTML5, CSS3, JavaScript</small>
         </div>
       </div>
     </div>
@@ -262,5 +262,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
     <script src="./resources/index.js"></script>
+    <!--Dock-->
+    <script src="/shared/dock.js" data-leander-xyz-version="v0"></script>
   </body>
 </html>
