--- a/v1/index.html
+++ b/v1/index.html
@@ -533,5 +533,7 @@
     <script src="./resources/js/navbar.js"></script>
     <!--Page Specific-->
     <script src="./resources/js/home.js"></script>
+    <!--Dock-->
+    <script src="/shared/dock.js" data-leander-xyz-version="v1"></script>
   </body>
 </html>
