✏️ correct link on v0 resume

--- a/v1/resume/index.html
+++ b/v1/resume/index.html
@@ -772,8 +772,8 @@
             <li>
               I'd say I have a good
               <span class="emphasis">sense of humour</span>. Check out
-              <a class="emphasis" href="../joke/index.html" target="_blank"
-                >v0.00001 of this site's homepage</a
+              <a class="emphasis" href="https://v0.leander.xyz" target="_blank"
+                >v0 of this site's homepage</a
               >
               that I played around with early January 2018, and see for
               yourself.
