♻️ add the dock to all HTML files

--- a/v0/index.html
+++ b/v0/index.html
@@ -118,7 +118,9 @@
       </p>
       <div class="row">
         <div class="col-md">
-          <a href="./projects/index.html"><strong>My First Webpage</strong></a>
+          <a href="./projects/index.html" target="_blank"
+            ><strong>My First Webpage</strong></a
+          >
           <p>
             I guess third, but the first two disappeared with my tumblr account.
             Made for a freecodecamp project.
@@ -262,7 +264,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
     <script src="./resources/index.js"></script>
-    <!--Dock-->
     <script src="/shared/dock.js" data-leander-xyz-version="v0"></script>
   </body>
 </html>
