--- a/v1/resume/index.html
+++ b/v1/resume/index.html
@@ -831,5 +831,6 @@
     <script src="../resources/js/navbar.js"></script>
     <!--Page Specific-->
     <script src="../resources/js/resume.js"></script>
+    <script src="/shared/dock.js" data-leander-xyz-version="v1"></script>
   </body>
 </html>
