🎉 Rebuild the EOL stuff from hosted fyi

--- a/fyi/index.html
+++ b/fyi/index.html
@@ -59,14 +59,19 @@
     />
     <meta name="msapplication-TileColor" content="#ff6347" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/img/icons/favicon-32x32.png"
+    />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
       href="/img/icons/favicon-16x16.png"
     />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
 
     <title>lgr.fyi | Link Shortener for the Ages</title>
   </head>
