♻️ move project files

--- a/v1/projects/index.html
+++ b/v1/projects/index.html
@@ -209,11 +209,7 @@
             <p class="concepts"></p>
           </div>
           <div class="proj-link-holder">
-            <a
-              class="proj-link live fas fa-link"
-              target="_blank"
-              title="Live Link"
-            ></a>
+            <a class="proj-link live fas fa-link" title="Live Link"></a>
             <a
               class="proj-link source fab fa-github"
               target="_blank"
