--- a/v1/index.html
+++ b/v1/index.html
@@ -111,7 +111,7 @@
     <nav>
       <ul>
         <li id="logo">
-          <a href="/index.html#home">
+          <a href="/#home">
             <img src="./resources/images/nav-logo.png" alt="My Logo" />
           </a>
           <div id="toggler">
@@ -123,12 +123,12 @@
           </div>
         </li>
         <div id="collapse-nav">
-          <a href="/index.html"><li class="nav-link">Home</li></a>
-          <a href="/index.html#about"><li class="nav-link">About</li></a>
-          <a href="./projects/index.html"><li class="nav-link">Projects</li></a>
-          <a href="/index.html#media"><li class="nav-link">Media</li></a>
-          <a href="/index.html#contact"><li class="nav-link">Contact</li></a>
-          <a href="./resume/index.html" class="round" id="hire"
+          <a href="/"><li class="nav-link">Home</li></a>
+          <a href="/#about"><li class="nav-link">About</li></a>
+          <a href="./projects/"><li class="nav-link">Projects</li></a>
+          <a href="/#media"><li class="nav-link">Media</li></a>
+          <a href="/#contact"><li class="nav-link">Contact</li></a>
+          <a href="./resume/" class="round" id="hire"
             ><li class="nav-link">Hire Me</li></a
           >
         </div>
@@ -308,7 +308,7 @@
           <!--<a href="https://docs.microsoft.com/en-us/dotnet/visual-basic/getting-started/" target="_blank">
             <img class="round" src="./resources/images/about/visual-basic.png" alt="VB Logo"/>
           </a>--><br />
-          <a href="./projects/index.html" id="and-more">and more!</a>
+          <a href="./projects/" id="and-more">and more!</a>
         </div>
       </div>
     </div>
@@ -319,7 +319,7 @@
       <div class="content">
         <div class="center">
           <div class="heading">My digital showcase</div>
-          <a class="round" href="./projects/index.html">Take a look</a>
+          <a class="round" href="./projects/">Take a look</a>
         </div>
       </div>
     </div>
@@ -361,7 +361,7 @@
               college kid on the internet? Anyway, the link below will take you
               to my blog page to get nice little snapshot of my life.
             </p>
-            <a class="text-small light round" href="./blog/index.html"
+            <a class="text-small light round" href="./blog/"
               >See my <b>Blog</b></a
             >
           </div>
@@ -430,11 +430,7 @@
                 href="./resume/Leander Rodrigues - Resume.pdf"
                 title=".pdf (0.14 MB)"
               ></a>
-              <a
-                class="fas fa-link"
-                href="./resume/index.html"
-                title="Web Page"
-              ></a>
+              <a class="fas fa-link" href="./resume/" title="Web Page"></a>
             </div>
             <h4>Thank you for your consideration!</h4>
           </div>
@@ -509,15 +505,15 @@
         </div>
         <div class="text-small" id="sitemap">
           <ul>
-            <a href="./index.html">Home</a>
+            <a href="./">Home</a>
             |
-            <a href="./projects/index.html">Projects</a>
+            <a href="./projects/">Projects</a>
             |
-            <a href="./blog/index.html">Blog</a>
+            <a href="./blog/">Blog</a>
             |
             <a href="https://github.com/leeandher/programming-notes">Notes</a>
             |
-            <a href="./resume/index.html">Resume</a>
+            <a href="./resume/">Resume</a>
           </ul>
         </div>
         <p class="text-small" style="">
