🍱 favicons for v0 sites, also new v0 sites

--- a/v0/index.html
+++ b/v0/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet prefetch"
       href="https://fonts.googleapis.com/css?family=Monda"
     />
-
+    <link rel="icon" type="image/png" href="./resources/favicon.png" />
     <link rel="stylesheet" href="./resources/style.css" />
   </head>
 
@@ -35,7 +35,7 @@
         href="#home"
       >
         <!--Logo-->
-        <img src="./resources/nav-logo.png" width="30" height="30" alt="" />
+        <img src="./resources/logo.png" width="30" height="30" alt="" />
       </a>
       <!--Hamburger-->
       <div
@@ -118,47 +118,58 @@
       </p>
       <div class="row">
         <div class="col-md">
-          <a href="./projects/index.html" target="_blank"
-            ><strong>My First Webpage</strong></a
-          >
+          <a href="./projects/concentration"><strong>Concentration</strong></a>
           <p>
-            I guess third, but the first two disappeared with my tumblr account.
-            Made for a freecodecamp project.
+            A JS game and first foray into programming, made in 10th grade
+            Computer Science class. Originally built within Khan Academy.
           </p>
-          <small>Uses: HTML5, CSS3</small>
+          <small>Uses: JavaScript</small>
         </div>
         <div class="col-md">
-          <img src="./resources/preview.png" alt="" />
+          <img
+            src="./resources/concentration.png"
+            alt="Title screen of Concentration"
+          />
         </div>
         <div class="col-md">
-          <img src="./resources/placeholder.jpg" alt="" />
+          <img src="./resources/rainbow.png" alt="Gameplay from of Rainbow" />
         </div>
         <div class="col-md">
-          <strong>My Second Project</strong>
+          <a href="./projects/rainbow"><strong>Rainbow Roadblock</strong></a>
           <p>
-            This is my default description for my project, or lack there of.
+            Another JS game, same class, same year. This is one is still kinda
+            fun in my opinion, as much as something like this can be.
           </p>
-          <small>Uses: HTML5, CSS3, JavaScript</small>
+          <small>Uses: JavaScript</small>
         </div>
       </div>
       <div class="row">
         <div class="col-md">
-          <strong>My Third Project</strong>
+          <a href="./projects/inversion"><strong>Inversion</strong></a>
           <p>
-            This is my default description for my project, or lack there of.
+            Last JS game, same class and year. I remember thinking this one was
+            ground-breaking innovation at the time. I was kinda wrong, but
+            there's definitely something about it still.
           </p>
-          <small>Uses: HTML5, CSS3, JavaScript</small>
+          <small>Uses: JavaScript</small>
         </div>
         <div class="col-md">
-          <img src="./resources/placeholder.jpg" alt="" />
+          <img
+            src="./resources/inversion.png"
+            alt="Title screen of Inversion"
+          />
         </div>
         <div class="col-md">
-          <img src="./resources/placeholder.jpg" alt="" />
+          <img
+            src="./resources/tribute.png"
+            alt="Preview of the my first webpage"
+          />
         </div>
         <div class="col-md">
-          <strong>My Fourth Project</strong>
+          <a href="./projects/tribute"><strong>My First Webpage</strong></a>
           <p>
-            This is my default description for my project, or lack there of.
+            I guess third, but the first two disappeared with my tumblr account.
+            Made for a freecodecamp project.
           </p>
           <small>Uses: HTML5, CSS3, JavaScript</small>
         </div>
@@ -240,15 +251,6 @@
             data-toggle="modal"
             data-target="#sc-modal"
           ></button>
-          <!--       <div class="modal fade" tabindex="-1" id="sc-modal">
-        <div class="modal-dialog">
-        <div class="modal-content">
-        <div class="modal-body">
-          <img src="https://www.dropbox.com/s/ottzkbdj6tz6hct/snapcode.jpg?raw=1" alt="my snapcode"/>
-        </div>
-        </div>
-        </div>
-      </div> -->
           <button class="btn btn-round fa fa-lg fa-instagram"></button>
           <button class="btn btn-round fa fa-lg fa-steam"></button>
         </div>
