--- a/v0/projects/tribute/index.html
+++ b/v0/projects/tribute/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>freeCodeCamp - Tribute Page</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css'><link rel="stylesheet" href="./style.css">
-
+  <link rel="icon" type="image/png" href="./jacket.png" />
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -27,7 +27,7 @@
   <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-4">
-      <img src="./jacket.jpg" alt="Stylized fan art of the Jacket character" class="img-setup img-fluid">
+      <img src="./jacket.png" alt="Stylized fan art of the Jacket character" class="img-setup img-fluid">
     </div>
     <div class="col-md-6">
       <p class="text">Jacket is the protagonist from the 'Hotline Miami' franchise. You could argue either way, that he's a serial killer, or that he's a vigilante hero, but regardless, his methods are brutal and effective.
