💄 favicons for v1 projects

--- a/v1/projects/index.html
+++ b/v1/projects/index.html
@@ -233,11 +233,7 @@
             <p class="concepts"></p>
           </div>
           <div class="proj-link-holder">
-            <a
-              class="proj-link live fas fa-link"
-              target="_blank"
-              title="Live Link"
-            ></a>
+            <a class="proj-link live fas fa-link" title="Live Link"></a>
             <a
               class="proj-link source fab fa-github"
               target="_blank"
@@ -265,11 +261,7 @@
             <p class="concepts"></p>
           </div>
           <div class="proj-link-holder">
-            <a
-              class="proj-link live fas fa-link"
-              target="_blank"
-              title="Live Link"
-            ></a>
+            <a class="proj-link live fas fa-link" title="Live Link"></a>
             <a
               class="proj-link source fab fa-github"
               target="_blank"
@@ -297,11 +289,7 @@
             <p class="concepts"></p>
           </div>
           <div class="proj-link-holder">
-            <a
-              class="proj-link live fas fa-link"
-              target="_blank"
-              title="Live Link"
-            ></a>
+            <a class="proj-link live fas fa-link" title="Live Link"></a>
             <a
               class="proj-link source fab fa-github"
               target="_blank"
@@ -329,11 +317,7 @@
             <p class="concepts"></p>
           </div>
           <div class="proj-link-holder">
-            <a
-              class="proj-link live fas fa-link"
-              target="_blank"
-              title="Live Link"
-            ></a>
+            <a class="proj-link live fas fa-link" title="Live Link"></a>
             <a
               class="proj-link source fab fa-github"
               target="_blank"
@@ -361,11 +345,7 @@
             <p class="concepts"></p>
           </div>
           <div class="proj-link-holder">
-            <a
-              class="proj-link live fas fa-link"
-              target="_blank"
-              title="Live Link"
-            ></a>
+            <a class="proj-link live fas fa-link" title="Live Link"></a>
             <a
               class="proj-link source fab fa-github"
               target="_blank"
@@ -393,11 +373,7 @@
             <p class="concepts"></p>
           </div>
           <div class="proj-link-holder">
-            <a
-              class="proj-link live fas fa-link"
-              target="_blank"
-              title="Live Link"
-            ></a>
+            <a class="proj-link live fas fa-link" title="Live Link"></a>
             <a
               class="proj-link source fab fa-github"
               target="_blank"
@@ -425,11 +401,7 @@
             <p class="concepts"></p>
           </div>
           <div class="proj-link-holder">
-            <a
-              class="proj-link live fas fa-link"
-              target="_blank"
-              title="Live Link"
-            ></a>
+            <a class="proj-link live fas fa-link" title="Live Link"></a>
             <a
               class="proj-link source fab fa-github"
               target="_blank"
