--- a/v0/projects/inversion/index.html
+++ b/v0/projects/inversion/index.html
@@ -2,7 +2,12 @@
 <html>
   <head>
     <title>Inversion</title>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/processing.js/1.4.8/processing.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.4.8/processing.min.js"
+      integrity="sha512-ifXEH8sjBHobcsSIahwQF1CMdj9UbOHenTQfqR3Ekiop/dz/zPwODlHVpg7F4dWAV8iQxa1RD3x/qwiR4MDukA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link rel="icon" type="image/png" href="./favicon.png" />
   </head>
   <style>
