--- a/v0/projects/rainbow/index.html
+++ b/v0/projects/rainbow/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JavaScript</title>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/processing.js/1.4.8/processing.min.js"></script>
+    <title>Rainbow Roadblock</title>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.4.8/processing.min.js"
+      integrity="sha512-ifXEH8sjBHobcsSIahwQF1CMdj9UbOHenTQfqR3Ekiop/dz/zPwODlHVpg7F4dWAV8iQxa1RD3x/qwiR4MDukA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link rel="icon" type="image/png" href="./favicon.png" />
   </head>
   <style>
