✨ Add dock to v2

--- a/v0/index.html
+++ b/v0/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>leander.xyz - v0</title>
+    <title>leander.xyz</title>
     <link
       rel="stylesheet"
       href="path/to/font-awesome/css/font-awesome.min.css"
