✨ fix redirects for /projects

--- a/v0/index.html
+++ b/v0/index.html
@@ -118,7 +118,7 @@
       </p>
       <div class="row">
         <div class="col-md">
-          <a href="./projects/concentration"><strong>Concentration</strong></a>
+          <a href="./portfolio/concentration"><strong>Concentration</strong></a>
           <p>
             A JS game and first foray into programming, made in 10th grade
             Computer Science class. Originally built within Khan Academy.
@@ -135,7 +135,7 @@
           <img src="./resources/rainbow.png" alt="Gameplay from of Rainbow" />
         </div>
         <div class="col-md">
-          <a href="./projects/rainbow"><strong>Rainbow Roadblock</strong></a>
+          <a href="./portfolio/rainbow"><strong>Rainbow Roadblock</strong></a>
           <p>
             Another JS game, same class, same year. This is one is still kinda
             fun in my opinion, as much as something like this can be.
@@ -145,7 +145,7 @@
       </div>
       <div class="row">
         <div class="col-md">
-          <a href="./projects/inversion"><strong>Inversion</strong></a>
+          <a href="./portfolio/inversion"><strong>Inversion</strong></a>
           <p>
             Last JS game, same class and year. I remember thinking this one was
             ground-breaking innovation at the time. I was kinda wrong, but
@@ -166,7 +166,7 @@
           />
         </div>
         <div class="col-md">
-          <a href="./projects/tribute"><strong>My First Webpage</strong></a>
+          <a href="./portfolio/tribute"><strong>My First Webpage</strong></a>
           <p>
             I guess third, but the first two disappeared with my tumblr account.
             Made for a freecodecamp project.
