--- a/fyi/index.html
+++ b/fyi/index.html
@@ -82,7 +82,7 @@
         enabled. Please enable it to continue.</strong
       >
     </noscript>
-    <div id="root"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
