🚧 WIP on plaques

--- a/v0/index.html
+++ b/v0/index.html
@@ -266,6 +266,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
     <script src="./resources/index.js"></script>
-    <script src="/shared/dock.js" data-leander-xyz-version="v0"></script>
+    <script src="/shared/dock.js" data-leander-xyz-version="v0" defer></script>
   </body>
 </html>
