--- a/v1/index.html
+++ b/v1/index.html
@@ -529,6 +529,7 @@
     <script src="./resources/js/navbar.js"></script>
     <!--Page Specific-->
     <script src="./resources/js/home.js"></script>
-    <script src="/shared/dock.js" data-leander-xyz-version="v1"></script>
+    <script src="/shared/dock.js" data-leander-xyz-version="v1" defer></script>
+    <script src="/shared/plaques.js" defer></script>
   </body>
 </html>
