--- a/v1/projects/index.html
+++ b/v1/projects/index.html
@@ -464,6 +464,6 @@
     <script src="../resources/js/navbar.js"></script>
     <!--Page Specific-->
     <script src="../resources/js/projects.js"></script>
-    <script src="/shared/dock.js" data-leander-xyz-version="v1"></script>
+    <script src="/shared/dock.js" data-leander-xyz-version="v1" defer></script>
   </body>
 </html>
