💄 style on the plaque

--- a/v0/index.html
+++ b/v0/index.html
@@ -267,5 +267,6 @@
 
     <script src="./resources/index.js"></script>
     <script src="/shared/dock.js" data-leander-xyz-version="v0" defer></script>
+    <script src="/shared/plaques.js" data-sm-plaque-slug="v0" defer></script>
   </body>
 </html>
