✨ add plaques for v0

--- a/v0/portfolio/concentration/index.html
+++ b/v0/portfolio/concentration/index.html
@@ -1695,5 +1695,10 @@
         if (typeof draw !== "undefined") processing.draw = draw;
       });
     </script>
+    <script
+      src="/shared/plaques.js"
+      data-sm-plaque-slug="concentration"
+      defer
+    ></script>
   </body>
 </html>
