--- a/v0/portfolio/inversion/index.html
+++ b/v0/portfolio/inversion/index.html
@@ -969,5 +969,10 @@
         if (typeof draw !== "undefined") processing.draw = draw;
       });
     </script>
+    <script
+      src="/shared/plaques.js"
+      data-sm-plaque-slug="inversion"
+      defer
+    ></script>
   </body>
 </html>
