--- a/v0/portfolio/rainbow/index.html
+++ b/v0/portfolio/rainbow/index.html
@@ -816,5 +816,10 @@ for (var i = 0; i<150; i++) {
         if (typeof draw !== "undefined") processing.draw = draw;
       });
     </script>
+    <script
+      src="/shared/plaques.js"
+      data-sm-plaque-slug="rainbow"
+      defer
+    ></script>
   </body>
 </html>
