--- a/v0/portfolio/tribute/index.html
+++ b/v0/portfolio/tribute/index.html
@@ -139,5 +139,10 @@
 </div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+  <script
+    src="/shared/plaques.js"
+    data-sm-plaque-slug="tribute"
+    defer
+  ></script>
 </body>
 </html>
