--- a/v1/projects/calculator/index.html
+++ b/v1/projects/calculator/index.html
@@ -96,5 +96,9 @@
     <!-- partial -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./script.js"></script>
+    <script
+      src="/shared/plaques.js"
+      data-sm-plaque-slug="v1_calculator"
+      defer></script>
   </body>
 </html>
