✨ Add plaques to all of v1

--- a/v1/projects/wikiview/index.html
+++ b/v1/projects/wikiview/index.html
@@ -340,5 +340,10 @@
     <script src="https://unpkg.com/popper.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
     <script src="./script.js"></script>
+    <script
+      src="/shared/plaques.js"
+      data-sm-plaque-slug="v1_wikiview"
+      defer
+    ></script>
   </body>
 </html>
