--- a/v1/projects/liveontwitch/index.html
+++ b/v1/projects/liveontwitch/index.html
@@ -731,5 +731,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="./script.js"></script>
+    <script
+      src="/shared/plaques.js"
+      data-sm-plaque-slug="v1_liveontwitch"
+      defer
+    ></script>
   </body>
 </html>
