--- a/v1/projects/quotes/index.html
+++ b/v1/projects/quotes/index.html
@@ -84,5 +84,10 @@
     <!-- partial -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./script.js"></script>
+    <script
+      src="/shared/plaques.js"
+      data-sm-plaque-slug="v1_quotes"
+      defer
+    ></script>
   </body>
 </html>
