--- a/v1/projects/simon/index.html
+++ b/v1/projects/simon/index.html
@@ -58,5 +58,10 @@
     <!-- partial -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./script.js"></script>
+    <script
+      src="/shared/plaques.js"
+      data-sm-plaque-slug="v1_simon"
+      defer
+    ></script>
   </body>
 </html>
