--- a/v1/projects/weather/index.html
+++ b/v1/projects/weather/index.html
@@ -76,5 +76,10 @@
     <!-- partial -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./script.js"></script>
+    <script
+      src="/shared/plaques.js"
+      data-sm-plaque-slug="v1_weather"
+      defer
+    ></script>
   </body>
 </html>
