🛠️ change plaque slug

--- a/v1/projects/calculator/index.html
+++ b/v1/projects/calculator/index.html
@@ -98,7 +98,8 @@
     <script src="./script.js"></script>
     <script
       src="/shared/plaques.js"
-      data-sm-plaque-slug="v1_calculator"
-      defer></script>
+      data-sm-plaque-slug="calculator"
+      defer
+    ></script>
   </body>
 </html>
