--- a/v1/projects/liveontwitch/index.html
+++ b/v1/projects/liveontwitch/index.html
@@ -733,7 +733,7 @@
     <script src="./script.js"></script>
     <script
       src="/shared/plaques.js"
-      data-sm-plaque-slug="v1_liveontwitch"
+      data-sm-plaque-slug="liveontwitch"
       defer
     ></script>
   </body>
