--- a/v1/projects/quotes/index.html
+++ b/v1/projects/quotes/index.html
@@ -86,7 +86,7 @@
     <script src="./script.js"></script>
     <script
       src="/shared/plaques.js"
-      data-sm-plaque-slug="v1_quotes"
+      data-sm-plaque-slug="quotes"
       defer
     ></script>
   </body>
