--- a/v1/projects/tictactoe/index.html
+++ b/v1/projects/tictactoe/index.html
@@ -197,7 +197,7 @@
     <script src="./script.js"></script>
     <script
       src="/shared/plaques.js"
-      data-sm-plaque-slug="v1_tictactoe"
+      data-sm-plaque-slug="tictactoe"
       defer
     ></script>
   </body>
