--- a/v1/projects/wikiview/index.html
+++ b/v1/projects/wikiview/index.html
@@ -342,7 +342,7 @@
     <script src="./script.js"></script>
     <script
       src="/shared/plaques.js"
-      data-sm-plaque-slug="v1_wikiview"
+      data-sm-plaque-slug="wikiview"
       defer
     ></script>
   </body>
