--- a/v1/projects/fuelgauge/index.html
+++ b/v1/projects/fuelgauge/index.html
@@ -112,7 +112,7 @@
     <script src="./script.js"></script>
     <script
       src="/shared/plaques.js"
-      data-sm-plaque-slug="v1_fuelgauge"
+      data-sm-plaque-slug="fuelgauge"
       defer
     ></script>
   </body>
