--- a/v1/projects/weather/index.html
+++ b/v1/projects/weather/index.html
@@ -78,7 +78,7 @@
     <script src="./script.js"></script>
     <script
       src="/shared/plaques.js"
-      data-sm-plaque-slug="v1_weather"
+      data-sm-plaque-slug="weather"
       defer
     ></script>
   </body>
